// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAst snapshots > full RootNode 1`] = `
{
  "kind": "Root",
  "operations": [
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "listPets",
      "parameters": [
        {
          "in": "query",
          "kind": "Parameter",
          "name": "limit",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "max": 100,
            "min": 1,
            "name": undefined,
            "nullable": undefined,
            "primitive": "integer",
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
      ],
      "path": "/pets",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A list of pets",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "ref": "PetList",
            "type": "ref",
            "writeOnly": undefined,
          },
          "statusCode": "200",
        },
        {
          "description": "Bad request",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "ref": "Error",
            "type": "ref",
            "writeOnly": undefined,
          },
          "statusCode": "400",
        },
      ],
      "summary": "List all pets",
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": true,
      "description": undefined,
      "kind": "Operation",
      "method": "POST",
      "operationId": "createPet",
      "parameters": [],
      "path": "/pets",
      "requestBody": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "ref": "NewPet",
        "type": "ref",
        "writeOnly": undefined,
      },
      "responses": [
        {
          "description": "Pet created",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "ref": "Pet",
            "type": "ref",
            "writeOnly": undefined,
          },
          "statusCode": "201",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "getPetById",
      "parameters": [
        {
          "in": "path",
          "kind": "Parameter",
          "name": "petId",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "primitive": "integer",
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
      ],
      "path": "/pets/{petId}",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A single pet",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "ref": "Pet",
            "type": "ref",
            "writeOnly": undefined,
          },
          "statusCode": "200",
        },
        {
          "description": "Not found",
          "kind": "Response",
          "mediaType": undefined,
          "schema": undefined,
          "statusCode": "404",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
  ],
  "schemas": [
    {
      "additionalProperties": undefined,
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Pet",
      "nullable": undefined,
      "patternProperties": undefined,
      "primitive": "object",
      "properties": [
        {
          "kind": "Property",
          "name": "id",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "primitive": "integer",
            "readOnly": true,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "name",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "tag",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": true,
            "nullish": true,
            "optional": undefined,
            "pattern": undefined,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "additionalProperties": undefined,
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "NewPet",
      "nullable": undefined,
      "patternProperties": undefined,
      "primitive": "object",
      "properties": [
        {
          "kind": "Property",
          "name": "name",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "tag",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": true,
            "pattern": undefined,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "items": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "readOnly": undefined,
          "ref": "Pet",
          "type": "ref",
          "writeOnly": undefined,
        },
      ],
      "kind": "Schema",
      "max": undefined,
      "min": undefined,
      "name": "PetList",
      "nullable": undefined,
      "primitive": "array",
      "readOnly": undefined,
      "title": undefined,
      "type": "array",
      "unique": undefined,
      "writeOnly": undefined,
    },
    {
      "additionalProperties": undefined,
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Error",
      "nullable": undefined,
      "patternProperties": undefined,
      "primitive": "object",
      "properties": [
        {
          "kind": "Property",
          "name": "code",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "primitive": "integer",
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "message",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "max": undefined,
            "min": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "enumValues": [
        "active",
        "inactive",
        "pending",
      ],
      "example": undefined,
      "kind": "Schema",
      "name": "Status",
      "nullable": undefined,
      "primitive": "string",
      "readOnly": undefined,
      "title": undefined,
      "type": "enum",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "discriminatorPropertyName": undefined,
      "example": undefined,
      "kind": "Schema",
      "members": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "readOnly": undefined,
          "ref": "Pet",
          "type": "ref",
          "writeOnly": undefined,
        },
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "readOnly": undefined,
          "ref": "Error",
          "type": "ref",
          "writeOnly": undefined,
        },
      ],
      "name": "PetOrError",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "union",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "members": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "readOnly": undefined,
          "ref": "Pet",
          "type": "ref",
          "writeOnly": undefined,
        },
        {
          "additionalProperties": undefined,
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "patternProperties": undefined,
          "primitive": "object",
          "properties": [
            {
              "kind": "Property",
              "name": "createdAt",
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "local": undefined,
                "name": undefined,
                "nullable": undefined,
                "nullish": undefined,
                "offset": false,
                "optional": true,
                "primitive": "string",
                "readOnly": undefined,
                "title": undefined,
                "type": "datetime",
                "writeOnly": undefined,
              },
            },
            {
              "kind": "Property",
              "name": "email",
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "name": undefined,
                "nullable": undefined,
                "nullish": undefined,
                "optional": true,
                "primitive": "string",
                "readOnly": undefined,
                "title": undefined,
                "type": "email",
                "writeOnly": undefined,
              },
            },
          ],
          "readOnly": undefined,
          "title": undefined,
          "type": "object",
          "writeOnly": undefined,
        },
      ],
      "name": "FullPet",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "intersection",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": "some-value",
      "kind": "Schema",
      "max": undefined,
      "min": undefined,
      "name": "NullableString",
      "nullable": true,
      "pattern": undefined,
      "primitive": "string",
      "readOnly": true,
      "title": undefined,
      "type": "string",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "NullableRef",
      "nullable": true,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Pet",
      "title": undefined,
      "type": "ref",
      "writeOnly": undefined,
    },
  ],
}
`;

exports[`buildAst snapshots > operation 'createPet' 1`] = `
{
  "deprecated": true,
  "description": undefined,
  "kind": "Operation",
  "method": "POST",
  "operationId": "createPet",
  "parameters": [],
  "path": "/pets",
  "requestBody": {
    "default": undefined,
    "deprecated": undefined,
    "description": undefined,
    "example": undefined,
    "kind": "Schema",
    "name": undefined,
    "nullable": undefined,
    "pattern": undefined,
    "readOnly": undefined,
    "ref": "NewPet",
    "type": "ref",
    "writeOnly": undefined,
  },
  "responses": [
    {
      "description": "Pet created",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "ref": "Pet",
        "type": "ref",
        "writeOnly": undefined,
      },
      "statusCode": "201",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'getPetById' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "getPetById",
  "parameters": [
    {
      "in": "path",
      "kind": "Parameter",
      "name": "petId",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "max": undefined,
        "min": undefined,
        "name": undefined,
        "nullable": undefined,
        "primitive": "integer",
        "readOnly": undefined,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
  ],
  "path": "/pets/{petId}",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A single pet",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "ref": "Pet",
        "type": "ref",
        "writeOnly": undefined,
      },
      "statusCode": "200",
    },
    {
      "description": "Not found",
      "kind": "Response",
      "mediaType": undefined,
      "schema": undefined,
      "statusCode": "404",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'listPets' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "listPets",
  "parameters": [
    {
      "in": "query",
      "kind": "Parameter",
      "name": "limit",
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "max": 100,
        "min": 1,
        "name": undefined,
        "nullable": undefined,
        "primitive": "integer",
        "readOnly": undefined,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
  ],
  "path": "/pets",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A list of pets",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "ref": "PetList",
        "type": "ref",
        "writeOnly": undefined,
      },
      "statusCode": "200",
    },
    {
      "description": "Bad request",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "ref": "Error",
        "type": "ref",
        "writeOnly": undefined,
      },
      "statusCode": "400",
    },
  ],
  "summary": "List all pets",
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > schema 'FullPet' ('allOf / intersection with format fiel…') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "members": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Pet",
      "type": "ref",
      "writeOnly": undefined,
    },
    {
      "additionalProperties": undefined,
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "patternProperties": undefined,
      "primitive": "object",
      "properties": [
        {
          "kind": "Property",
          "name": "createdAt",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "local": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "offset": false,
            "optional": true,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "datetime",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "email",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": true,
            "primitive": "string",
            "readOnly": undefined,
            "title": undefined,
            "type": "email",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
  ],
  "name": "FullPet",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "intersection",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'Pet' ('object with required props') 1`] = `
{
  "additionalProperties": undefined,
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "name": "Pet",
  "nullable": undefined,
  "patternProperties": undefined,
  "primitive": "object",
  "properties": [
    {
      "kind": "Property",
      "name": "id",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "max": undefined,
        "min": undefined,
        "name": undefined,
        "nullable": undefined,
        "nullish": undefined,
        "optional": undefined,
        "primitive": "integer",
        "readOnly": true,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
    {
      "kind": "Property",
      "name": "name",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "max": undefined,
        "min": undefined,
        "name": undefined,
        "nullable": undefined,
        "nullish": undefined,
        "optional": undefined,
        "pattern": undefined,
        "primitive": "string",
        "readOnly": undefined,
        "title": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
    },
    {
      "kind": "Property",
      "name": "tag",
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "max": undefined,
        "min": undefined,
        "name": undefined,
        "nullable": true,
        "nullish": true,
        "optional": undefined,
        "pattern": undefined,
        "primitive": "string",
        "readOnly": undefined,
        "title": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
    },
  ],
  "readOnly": undefined,
  "title": undefined,
  "type": "object",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'PetList' ('array of refs') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "items": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Pet",
      "type": "ref",
      "writeOnly": undefined,
    },
  ],
  "kind": "Schema",
  "max": undefined,
  "min": undefined,
  "name": "PetList",
  "nullable": undefined,
  "primitive": "array",
  "readOnly": undefined,
  "title": undefined,
  "type": "array",
  "unique": undefined,
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'PetOrError' ('oneOf / union') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "discriminatorPropertyName": undefined,
  "example": undefined,
  "kind": "Schema",
  "members": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Pet",
      "type": "ref",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Error",
      "type": "ref",
      "writeOnly": undefined,
    },
  ],
  "name": "PetOrError",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "union",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'Status' ('enum') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "enumValues": [
    "active",
    "inactive",
    "pending",
  ],
  "example": undefined,
  "kind": "Schema",
  "name": "Status",
  "nullable": undefined,
  "primitive": "string",
  "readOnly": undefined,
  "title": undefined,
  "type": "enum",
  "writeOnly": undefined,
}
`;
